--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -84,8 +84,7 @@
             style="@style/font_14_bold_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="64dp"
+            android:layout_margin="64dp"
             android:backgroundTint="@color/red_DC2020"
             android:gravity="center"
             android:text="@string/logout_button"
