--- a/app/src/main/res/layout/fragment_parent_profile.xml
+++ b/app/src/main/res/layout/fragment_parent_profile.xml
@@ -119,10 +119,8 @@
             style="@style/font_14_bold_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="64dp"
+            android:layout_margin="66dp"
             android:backgroundTint="@color/red_DC2020"
-            android:drawableLeft="@drawable/ic_logout_white"
             android:gravity="center"
             android:text="@string/logout_button"
             android:textAlignment="center"
